--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -59,10 +59,9 @@ button:focus-visible {
 }
 
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  display: block;
+  height: 100vh;
+  width: 100%;
 }
 
 @media (prefers-color-scheme: light) {
@@ -77,3 +76,161 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+:root {
+  --primary: #00D764;
+  --secondary: #00C2B2;
+  --tertiary:  #C2D700;
+  --black: #2D2D2D;
+  --white: #FDFDFD;
+  --text-color: #353434;
+  --border-color: var(--gray-700);
+
+  /* Primary Scale */
+  --primary-50:  #e0fbee;
+  --primary-100: #c2f7dc;
+  --primary-200: #9bf0c4;
+  --primary-300: #70e7a8;
+  --primary-400: #45dd8c;
+  --primary-500: #00D764;
+  --primary-600: #00b957;
+  --primary-700: #009b4a;
+  --primary-800: #007d3c;
+  --primary-900: #005e2d;
+
+  /* Secondary Scale (Teal) */
+  --secondary-50:  #e0faf9;
+  --secondary-100: #b3f1ed;
+  --secondary-200: #80e7e1;
+  --secondary-300: #4ddcd5;
+  --secondary-400: #26d3ca;
+  --secondary-500: #00C2B2;
+  --secondary-600: #00a99b;
+  --secondary-700: #008d83;
+  --secondary-800: #00736b;
+  --secondary-900: #005952;
+
+  /* Tertiary Scale (Lime-Yellow) */
+  --tertiary-50:  #f9fbe0;
+  --tertiary-100: #f1f6b3;
+  --tertiary-200: #e7f080;
+  --tertiary-300: #dce94d;
+  --tertiary-400: #d0e326;
+  --tertiary-500: #C2D700;
+  --tertiary-600: #a9be00;
+  --tertiary-700: #8fa300;
+  --tertiary-800: #758900;
+  --tertiary-900: #5b6e00;
+
+  /* Usable Colors */
+
+  /* Red */
+  --red-50:   #ffe5e5;
+  --red-100:  #fdbcbc;
+  --red-200:  #f79292;
+  --red-300:  #f16767;
+  --red-400:  #ec3d3d;
+  --red-500:  #e61919;
+  --red-600:  #c11414;
+  --red-700:  #9c1010;
+  --red-800:  #760c0c;
+  --red-900:  #510808;
+
+  /* Orange */
+  --orange-50:  #fff2e0;
+  --orange-100: #ffd7b3;
+  --orange-200: #ffba80;
+  --orange-300: #ff9c4d;
+  --orange-400: #ff8026;
+  --orange-500: #ff6600;
+  --orange-600: #d95500;
+  --orange-700: #b34400;
+  --orange-800: #8c3300;
+  --orange-900: #662200;
+
+  /* Yellow */
+  --yellow-50:  #fffde5;
+  --yellow-100: #fff8b3;
+  --yellow-200: #fff280;
+  --yellow-300: #ffeb4d;
+  --yellow-400: #ffe626;
+  --yellow-500: #ffe000;
+  --yellow-600: #d4be00;
+  --yellow-700: #aa9b00;
+  --yellow-800: #807800;
+  --yellow-900: #555500;
+
+  /* Blue */
+  --blue-50:   #e5f0ff;
+  --blue-100:  #b8d8ff;
+  --blue-200:  #8ac0ff;
+  --blue-300:  #5ca8ff;
+  --blue-400:  #2e90ff;
+  --blue-500:  #0077ff;
+  --blue-600:  #0063d9;
+  --blue-700:  #0050b3;
+  --blue-800:  #003d8c;
+  --blue-900:  #002a66;
+
+  /* Purple */
+  --purple-50:  #f2eaff;
+  --purple-100: #dabfff;
+  --purple-200: #c295ff;
+  --purple-300: #aa6aff;
+  --purple-400: #9340ff;
+  --purple-500: #7b15ff;
+  --purple-600: #6612d4;
+  --purple-700: #520faa;
+  --purple-800: #3d0c80;
+  --purple-900: #290955;
+
+  /* Cyan */
+  --cyan-50:  #e0fafa;
+  --cyan-100: #b3f1f1;
+  --cyan-200: #80e7e7;
+  --cyan-300: #4ddcdc;
+  --cyan-400: #26d3d3;
+  --cyan-500: #00c9c9;
+  --cyan-600: #00a8a8;
+  --cyan-700: #008989;
+  --cyan-800: #006a6a;
+  --cyan-900: #004b4b;
+
+  /* Cream (soft & close to white) */
+  --cream-50:  #fffefc;
+  --cream-100: #fffdf7;
+  --cream-200: #fffbef;
+  --cream-300: #fff8e8;
+  --cream-400: #fff5e1;
+  --cream-500: #fff2d9;
+  --cream-600: #e6dac3;
+  --cream-700: #ccc2ae;
+  --cream-800: #b3aa99;
+  --cream-900: #999284;
+
+  
+  /* Gray */
+  --gray-50:  #f8f8f8;
+  --gray-100: #e0e0e0;
+  --gray-200: #c9c9c9;
+  --gray-300: #b2b2b2;
+  --gray-400: #9b9b9b;
+  --gray-500: #848484;
+  --gray-600: #6d6d6d;
+  --gray-700: #565656;
+  --gray-800: #3f3f3f;
+  --gray-900: #292929;
+
+  /* Pink */
+  --pink-50:  #ffeaf2;
+  --pink-100: #ffc2d6;
+  --pink-200: #ff99ba;
+  --pink-300: #ff709d;
+  --pink-400: #ff4781;
+  --pink-500: #ff1e64;
+  --pink-600: #d91755;
+  --pink-700: #b31146;
+  --pink-800: #8c0c37;
+  --pink-900: #660628;
+}
+
